Commit pour changer branche 2

--- a/style/stylePPE.css
+++ b/style/stylePPE.css
@@ -33,6 +33,22 @@ body
   font-weight: 300;
   letter-spacing: 0.08em;
 }
+/* FLECHE RETOUR */
+.fleche
+{
+  padding-bottom: 3px;
+  height: 32px;
+  width: 30px;
+}
+.retour
+{
+  text-decoration: none;
+  color: #373A3C;
+  font-size: 1.4rem;
+}
+a:hover {
+  text-decoration: none;
+}
 
 /* NAVBAR */
 .navbar.navbar-7 .navbar-toggler-icon
@@ -121,6 +137,7 @@ background-image: linear-gradient(to right bottom, #3747ce, #0068e0, #0084ea, #0
   max-width: 140px;
   height: 140px;
 }
+
 /* PAGE DISCUSSIONS */
 .card-header
 {
@@ -174,7 +191,7 @@ background-image: linear-gradient(to right bottom, #3747ce, #0068e0, #0084ea, #0
   height: 2rem;
   font-size: 0.8rem;
 }
-/* Aperçu message */
+/* APERCU MESSAGE */
 .card_apercu, .card_apercu .card-header
 {
   border: 0;
@@ -221,6 +238,16 @@ background-image: linear-gradient(to right bottom, #3747ce, #0068e0, #0084ea, #0
   color: #6c757d!important;
   font-size: 80%;
   font-weight: 400;
+}
+/* MODIF MESSAGE */
+.titreCentre
+{
+  font-family: 'Lato', sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 300;
+  letter-spacing: 0.08em;
 }
 
 /* PERMET D'AFFICHER LE CURSEUR DANS LES INPUTS ET TEXTAREA */
