--- a/style/stylePPE.css
+++ b/style/stylePPE.css
@@ -1,4 +1,5 @@
-*, *::before, *::after  /* Selectionne tous les élements */
+/* Selectionne tous les élements */
+*, *::before, *::after
 {
   box-sizing: border-box;
   padding: 0;
@@ -40,7 +41,7 @@ body
   font-weight: 300;
   letter-spacing: 0.08em;
 }
-/* FLECHE RETOUR */
+/* ---------------- FLECHE RETOUR & ACTUALISER ---------------- */
 .div_fleche
 {
   display: flex;
@@ -58,12 +59,11 @@ body
   color: #373A3C;
   font-size: 1.4rem;
 }
-
 a:hover {
   text-decoration: none;
 }
 
-/* NAVBAR */
+/* ---------------- NAVBAR ---------------- */
 .navbar.navbar-7 .navbar-toggler-icon
 {
   background-image: url('https://image.flaticon.com/icons/png/512/60/60995.png');
@@ -85,7 +85,7 @@ a:hover {
   color: #00FF00 !important;
 }
 
-/* PAGE DE CONNEXION */
+/* ---------------- PAGE DE CONNEXION ---------------- */
 .titre_accueil
 {
   font-family: 'Lato', sans-serif;
@@ -93,6 +93,10 @@ a:hover {
   font-size: 40px;
   font-weight: 300;
   letter-spacing: 0.08em;
+}
+.text-petit
+{
+  color: #50575d ;
 }
 input#identifiant, input#mdp
 {
@@ -121,7 +125,7 @@ input#identifiant, input#mdp
 background-image: linear-gradient(to right bottom, #3747ce, #0068e0, #0084ea, #009dec, #00b4eb, #03c2ec, #29cfeb, #49dbe8, #47e3e8, #4aece6, #52f3e2, #5ffbdd);
 */
 
-/* INDEX */
+/* ---------------- INDEX ---------------- */
 
 .shadow-sm
 {
@@ -173,7 +177,7 @@ background-image: linear-gradient(to right bottom, #3747ce, #0068e0, #0084ea, #0
   height: 140px;
 }
 
-/* PAGE DISCUSSIONS */
+/* ---------------- PAGE DISCUSSIONS ---------------- */
 .cardHamburger
 {
   border: none;
@@ -322,7 +326,7 @@ background-image: linear-gradient(to right bottom, #3747ce, #0068e0, #0084ea, #0
   height: 2rem;
   font-size: 0.8rem;
 }
-/* APERCU MESSAGE */
+/* ---------------- APERCU MESSAGE ---------------- */
 .card_apercu_perso
 {
   color: white;
@@ -384,7 +388,7 @@ background-image: linear-gradient(to right bottom, #3747ce, #0068e0, #0084ea, #0
   font-size: 80%;
   font-weight: 400;
 }
-/* MODIF MESSAGE */
+/* ---------------- MODIF MESSAGE ---------------- */
 .titreCentre
 {
   font-family: 'Lato', sans-serif;
@@ -404,7 +408,7 @@ background-image: linear-gradient(to right bottom, #3747ce, #0068e0, #0084ea, #0
   letter-spacing: 0.08em;
 }
 
-/* PROFIL */
+/* ---------------- PROFIL ---------------- */
 div.show-image
 {
   position: relative;
@@ -434,9 +438,29 @@ div.show-image:hover input
 {
   display: block;
 }
+.form_profil_identifiant
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container_profil_annexes
+{
+  display: flex;
+}
+.texte_identifiant_profil
+{
+  font-size: 30px;
+  font-weight: 300;
+  letter-spacing: 0.04em;
+}
+.texte_infos_profil
+{
+  font-size: 25px;
+  font-weight: 300;
+}
 
-
-/* PERMET D'AFFICHER LE CURSEUR DANS LES INPUTS ET TEXTAREA */
+/* ---------------- PERMET D'AFFICHER LE CURSEUR DANS LES INPUTS ET TEXTAREA ---------------- */
 input
 {
   caret-color: black;
@@ -445,7 +469,6 @@ textarea
 {
   caret-color: black;
 }
-
 .display-4
 {
   font-size: 1.4rem;
