--- a/style/stylePPE.css
+++ b/style/stylePPE.css
@@ -409,6 +409,10 @@ background-image: linear-gradient(to right bottom, #3747ce, #0068e0, #0084ea, #0
 }
 
 /* ---------------- PROFIL ---------------- */
+.texte
+{
+  margin-bottom: 0;
+}
 .container_profil
 {
   width: 60%;
@@ -476,7 +480,6 @@ div.div_avatar:hover img
 .div_equipes
 {
   flex-direction: column;
-  margin-bottom: 1.5rem;
 }
 .div_liste_equipes
 {
@@ -493,6 +496,29 @@ div.div_avatar:hover img
 {
   width: 6rem;
   height: 5rem;
+}
+
+.row_modifAvatar
+{
+  text-align: center;
+  justify-content: center;
+}
+.row_form_modifAvatar
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+.div_import_image
+{
+  width: 100%;
+  height: 12rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: lightgrey;
 }
 
 /* ---------------- PERMET D'AFFICHER LE CURSEUR DANS LES INPUTS ET TEXTAREA ---------------- */
