--- a/style/stylePPE.css
+++ b/style/stylePPE.css
@@ -6,24 +6,26 @@
 }
 html
 {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
+  height: -webkit-fill-available;
 }
 body
 {
-    padding-top: 3.5rem;
-    margin: 0;
-    padding: 0;
-    font-family: 'Lato', sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    text-align: left;
-    overflow-x: hidden;
+  min-height: 100%;
+  padding-top: 3.5rem;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: left;
+  overflow-x: hidden;
 
-    background-attachment: fixed;
-    background-image: linear-gradient(to right bottom, #3747ce, #0068e0, #0084ea, #009dec, #00b4eb, #03c2ec, #29cfeb, #49dbe8, #47e3e8, #4aece6, #52f3e2, #5ffbdd);
-    background-size: 100%;
-    caret-color: transparent;
+  background-attachment: fixed;
+  background-image: linear-gradient(to right bottom, #3747ce, #0068e0, #0084ea, #009dec, #00b4eb, #03c2ec, #29cfeb, #49dbe8, #47e3e8, #4aece6, #52f3e2, #5ffbdd);
+  background-size: 100%;
+  caret-color: transparent;
 }
 .container0
 {
@@ -96,7 +98,7 @@ a:hover {
 {
   font-family: 'Lato', sans-serif;
   text-transform: uppercase;
-  font-size: 40px;
+  font-size: 50px;
   font-weight: 300;
   letter-spacing: 0.08em;
 }
@@ -564,7 +566,13 @@ background-image: linear-gradient(to right bottom, #3747ce, #0068e0, #0084ea, #0
 }
 
 /* ---------------- Projet ---------------- */
-
+.muted
+{
+  text-align: center;
+  font-style: italic;
+  font-size: 1.2rem;
+  color: #6c757d!important;
+}
 .container_etape
 {
   padding-left: 1rem;
