--- a/utilisateur/calendrier/css/styleCalendrier.css
+++ b/utilisateur/calendrier/css/styleCalendrier.css
@@ -136,9 +136,42 @@ body
   display: flex;
   justify-content: center;
 }
+
+.div_modal_couleur
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: baseline;
+}
+
 .modal-footer
 {
   padding: 10px;
+}
+
+
+/* Input Couleur */
+.select_couleur
+{
+  width: 20%;
+  height: 100% !important;
+}
+.input_couleur_bleu
+{
+  background-color: #007bff;
+}
+.input_couleur_rouge
+{
+  background-color: #d9534f;
+}
+.input_couleur_vert
+{
+  background-color: #28a745;
+}
+.input_couleur_jaune
+{
+background-color: #d29e00;
 }
 
 
